@@ -1,3 +1,8 @@
+2012-11-20  Per Bothner  <per@bothner.com>
+
+	* vectors.scm (vector-fill!): Add optional bounds, as in R7RS.
+	* bytevector.scm (bytevector-copy): Likewise.
+
 2012-11-03  Per Bothner  <per@bothner.com>
 
 	* numbers.scm (log): Implement 2-argument version of log function.
