@@ -1,3 +1,7 @@
+2012-11-20  Per Bothner  <per@bothner.com>
+
+	* lib-test.scm: Add a vector-fill! test
+
 2012-11-18  Per Bothner  <per@bothner.com>
 
 	* MyFunc.java (MyFunc): Add SourceName attribute.
