@@ -1,3 +1,10 @@
+2012-11-20  Per Bothner  <per@bothner.com>
+
+	* FVector.java (setAll):  Rename to ...
+	(fill): and add optional range parameters.
+
+	* SimpleVector.java: Also implement RandomAccess.
+
 2012-06-08  Per Bothner  <per@bothner.com>
 
 	* LList.java (toString): Use getCar/getCdr instead of car/cdr.
